<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="title_hungry">"I\'m Hungry!"</string>
    <string name="title_workmates">"Available workmates"</string>
    <string name="nav_1">Map View</string>
    <string name="nav_2">List View</string>
    <string name="nav_3">Workmates</string>
    <string name="open_the_drawer">open the drawer</string>
    <string name="close_the_drawer">close the drawer</string>
    <string name="logout">LOGOUT</string>
    <string name="settings">SETTINGS</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="center_on_me">Center on me</string>
    <string name="not_connected">Not Connected</string>
    <string name="not_going_at_noon">Not going anywhere at noon</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="address_unknown">address unknown</string>
    <string name="search_a_place">search a place</string>
    <string name="search_a_mate">search a mate</string>

    <!-- mates list -->
    <string name="not_decided_yet">%s has not decided yet</string>
    <string name="chose_restaurant_pid">%s: chose restaurant id %s</string>
    <string name="chose_restaurant_name">%s is eating at %s</string>
    <string name="chose_restaurant_cuisine">%s is eating %s (%s)</string>

    <!-- Preferences -->
    <string name="preferences_clear_cache_key" translatable="false">clear_cache</string>
    <string name="preferences_clear_cache_description">use only if application feels slow</string>
    <string name="preferences_clear_cache_caption">Clear cached POIs</string>
    <string name="preferences_notif_key" translatable="false">notifications</string>
    <string name="preferences_notif_title">Receive notifications at noon</string>
    <string name="preferences_notif_text">as a reminder of where you\'re taking lunch.</string>
    <string name="preferences_login_text">to share meals with your colleagues</string>
    <string name="preferences_login_title">Login</string>
    <string name="preferences_login_key" translatable="false">login</string>
    <string name="preferences_theme_key" translatable="false">theme</string>
    <string name="preferences_theme_value_system">match system theme</string>
    <string name="preferences_theme_value_light">use light theme</string>
    <string name="preferences_theme_value_dark">use dark theme</string>
    <string name="preferences_theme_key_system" translatable="false">system</string>
    <string name="preferences_theme_key_light" translatable="false">light</string>
    <string name="preferences_theme_key_dark" translatable="false">dark</string>
    <string name="preferences_theme_title">Application theme</string>
    <string name="preferences_locale_key" translatable="false">locale</string>
    <string name="preferences_locale_title">Application locale</string>
    <string name="preferences_locale_key_system" translatable="false">system_locale</string>
    <string name="preferences_locale_key_english" translatable="false">english</string>
    <string name="preferences_locale_key_french" translatable="false">french</string>
    <string name="preferences_locale_value_system">match system locale</string>
    <string name="preferences_locale_value_english">use English</string>
    <string name="preferences_locale_value_french">use French</string>

    <!-- Non Translatable -->
    <string name="log_request_delay" translatable="false">delaying request by %s to be gentle on nominatim server</string>
    <string name="going_at_noon" translatable="false">Going at noon</string>
    <string name="content_loading" translatable="false">Content loading</string>
    <string name="load_pois_in_this_zone">load POIs in this zone</string>

</resources>

