<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        app:subtitleTextColor="@android:color/white"
        app:titleTextColor="@android:color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:toolbarId="@+id/collapsing_toolbar">
            <!-- app:layout_scrollInterpolator="@android:anim/decelerate_interpolator" -->

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription"
                tools:src="@drawable/ic_drawing_l"
                tools:tint="@color/grey" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/details_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:padding="14dp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@sample/restaurants.json/data/name" />

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/details_likes"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/list_item_margin"
                    android:isIndicator="true"
                    android:numStars="3"
                    android:rating="3"
                    android:stepSize="1"
                    android:theme="@style/RatingBar"
                    app:layout_constraintBottom_toBottomOf="@id/details_name"
                    app:layout_constraintStart_toEndOf="@id/details_name"
                    tools:rating="@sample/restaurants.json/data/stars" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_name"
                    tools:text="@sample/restaurants.json/data/address" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/details_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_place">

                <!--
                bottomNavBar is not perfect fit: DO NOT force it in.
                image button is crap https://stackoverflow.com/questions/4457030/
                -->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_call"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:gravity="center"
                    android:padding="18dp"
                    android:text="@string/call"
                    android:textColor="@color/orange"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:drawableTint="@color/orange"
                    app:drawableTopCompat="@drawable/ic_baseline_call_24"
                    app:layout_constraintEnd_toStartOf="@id/details_like"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_like"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:gravity="center"
                    android:padding="18dp"
                    android:text="@string/like"
                    android:textColor="@color/orange"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:drawableTint="@color/orange"
                    app:drawableTopCompat="@drawable/ic_baseline_star_rate_24"
                    app:layout_constraintEnd_toStartOf="@id/details_website"
                    app:layout_constraintStart_toEndOf="@id/details_call"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_website"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:gravity="center"
                    android:padding="18dp"
                    android:text="@string/website"
                    android:textColor="@color/orange"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:drawableTint="@color/orange"
                    app:drawableTopCompat="@drawable/ic_baseline_public_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/details_like"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/details_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_menu"
                tools:itemCount="3"
                tools:listitem="@layout/fragment_mates_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/details_floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/going_at_noon"
        app:backgroundTint="?attr/colorBackgroundFloating"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_check_circle_24"
        app:tint="?attr/colorButtonNormal" />
    <!-- remark: we can write app:tint="@null" -->

</androidx.coordinatorlayout.widget.CoordinatorLayout>